@@ -1,5 +1,4 @@
 v1.3.1
-	pref for lyrics saving location.. Patch 2152
 	patch 2230
 	remove song from filter, why visual refresh?
 
